# quran-api

./: .env.example  .gitignore  Cargo.toml  NEXT_STEPS.md  README.md
migrations/: 20260121_initial_schema.sql  202601220000001_seed_surah_001.sql  202601220000002_seed_surah_002.sql  202601220000003_seed_surah_003.sql  202601220000004_seed_surah_004.sql  202601220000005_seed_surah_005.sql  202601220000006_seed_surah_006.sql  202601220000007_seed_surah_007.sql  202601220000008_seed_surah_008.sql  202601220000009_seed_surah_009.sql  202601220000010_seed_surah_010.sql  202601220000011_seed_surah_011.sql  202601220000012_seed_surah_012.sql  202601220000013_seed_surah_013.sql  202601220000014_seed_surah_014.sql  202601220000015_seed_surah_015.sql  202601220000016_seed_surah_016.sql  202601220000017_seed_surah_017.sql  202601220000018_seed_surah_018.sql  202601220000019_seed_surah_019.sql  202601220000020_seed_surah_020.sql  202601220000021_seed_surah_021.sql  202601220000022_seed_surah_022.sql  202601220000023_seed_surah_023.sql  202601220000024_seed_surah_024.sql  202601220000025_seed_surah_025.sql  202601220000026_seed_surah_026.sql  202601220000027_seed_surah_027.sql  202601220000028_seed_surah_028.sql  202601220000029_seed_surah_029.sql  202601220000030_seed_surah_030.sql  202601220000031_seed_surah_031.sql  202601220000032_seed_surah_032.sql  202601220000033_seed_surah_033.sql  202601220000034_seed_surah_034.sql  202601220000035_seed_surah_035.sql  (+83 more)
src/: app.rs  main.rs  (+1 more)
tools/migration-generator/: Cargo.toml  README.md
tools/migration-generator/src/: main.rs
(+18 files in other folders)
