[package]
name = "quran_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono"
] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
