[package]
name = "quran-migration-generator"
version = "0.1.0"
edition = "2021"
description = "Generate SQL migrations from quran-json GitHub repository"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
